tenzir/integration/data/reference/python/test_empty_output_throws/step_00.ref
error: Traceback (most recent call last):
  File "/home/tobim/t/tenzir/python-uv/python/tenzir/tools/python_operator_executor.py", line 418, in main
    batch_out = execute_user_code(batch_in, compiled_code)
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/tobim/t/tenzir/python-uv/python/tenzir/tools/python_operator_executor.py", line 356, in execute_user_code
    raise RuntimeError(msg)
RuntimeError: Empty output not allowed
 = note: python process exited with error